--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,14 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+#root{
+  animation: fadeIn 1.5s;
+}
+@keyframes fadeIn {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
